--- a/style.css
+++ b/style.css
@@ -1,3 +1,60 @@
+body {
+    background-color: #ededed;
+}
+
 .main {
     display: flex;
+    padding-top: 10px;
+}
+
+.title {
+    text-align: center;
+    font-size: 50px;
+}
+
+.calculator {
+    background-color: #fff;
+    margin: auto;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 2px;
+}
+
+.calculator-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 75px);
+    grid-template-rows: minmax(50px, 60px) repeat(5, 50px);
+    gap: 5px;
+    justify-content: center;
+    align-content: center;
+}
+
+.display {
+    font-size: 25px;
+}
+
+.equals {
+    grid-column: span 2;
+}
+
+.output {
+    border: 1px solid black;
+    justify-items: end;
+    grid-column: span 4;
+    border-radius: 2px;
+    font-family: monospace;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding: 10px;
+}
+
+footer {
+    text-align: center;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 70px;
 }
