--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 .calculator-grid {
     display: grid;
-    grid-template-columns: repeat(4, 75px);
+    grid-template-columns: repeat(4, 60px);
     grid-template-rows: minmax(50px, 60px) repeat(5, 50px);
     gap: 5px;
     justify-content: center;
@@ -33,8 +33,31 @@ body {
     font-size: 25px;
 }
 
+.button {
+    border-radius: 2px;
+    border: 1px solid black;
+    font-size: 15px;
+    font-family: monospace;
+}
+
+.button:hover {
+    filter: brightness(80%);
+}
+
+.button:active {
+    filter: brightness(70%);
+}
+
 .equals {
     grid-column: span 2;
+}
+
+.clear, .delete {
+    background-color: rgb(255, 0, 0, 0.9);
+}
+
+.operators {
+    background-color: rgb(227, 99, 49, 0.9);
 }
 
 .output {
@@ -47,6 +70,8 @@ body {
     justify-content: end;
     align-items: center;
     padding: 10px;
+    background-color: rgb(39, 38, 38);
+    color: white;
 }
 
 footer {
