--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     padding: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 2px;
+    border: 1px solid black;
 }
 
 .calculator-grid {
@@ -29,8 +30,17 @@ body {
     align-content: center;
 }
 
-.display {
+.result {
     font-size: 25px;
+    flex-basis: 40px;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+.display {
+    flex-basis: 15px;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .button {
@@ -67,10 +77,10 @@ body {
     border-radius: 2px;
     font-family: monospace;
     display: flex;
-    justify-content: end;
-    align-items: center;
+    flex-direction: column;
+    align-items: end;
     padding: 10px;
-    background-color: rgb(39, 38, 38);
+    background-color: rgb(120, 119, 119);
     color: white;
 }
 
